...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.view.AddPlaylistActivity">

    <EditText
        android:id="@+id/newPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="playlist_name"
        android:ems="10"
        android:hint="@string/playlist_name"
        android:inputType="textPersonName"
...
        android:text="@string/click_on_a_song_to_delete_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateLyricsCheckBox" />

    <Button
        android:id="@+id/confirmBtn"
        style="@style/GradientButton"
        android:layout_marginTop="8dp"
        android:onClick="createPlaylist"
        android:text="@string/create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="0dp"
                android:layout_width="8dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/addSongToPlaylistSongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/centerHelper"
                android:hint="@string/song_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/addSongToPlaylistArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/centerHelper"
                android:hint="@string/artist_name"
                android:inputType="text"
...
            android:id="@+id/addPlaylistErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336" />

        <Button
            android:id="@+id/addSongToPlaylistBtn"
            style="@style/GradientButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:onClick="addItems"
            android:text="@string/add_song" />
    </LinearLayout>
...
