<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.prep.GameSettingsActivity">

    <ImageView
        android:id="@+id/topImage"
        style="@style/Background.Top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/gameSettingsTitle"
        style="@style/Text.Titles"
        android:text="@string/game_settings_text"
        app:layout_constraintStart_toStartOf="@id/topImage"
        app:layout_constraintTop_toTopOf="@id/topImage"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topImage"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/Text.Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_settings_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/game_name_hint"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/nameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nameTextView"
                app:layout_constraintTop_toTopOf="@id/nameTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/playlist"
                style="@style/Text.Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_selection_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/playlistSearchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:iconifiedByDefault="false"
                android:queryHint="@string/playlist_hint"
                app:layout_constraintBottom_toBottomOf="@id/playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/playlist"
                app:layout_constraintTop_toTopOf="@id/playlist" />

            <ListView
                android:id="@+id/playlistListView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/playlistSearchView"
                app:layout_constraintStart_toStartOf="@+id/playlistSearchView"
                app:layout_constraintTop_toBottomOf="@+id/playlistSearchView" />

            <TextView
                android:id="@+id/playlistSearchError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/playlistSearchView"
                app:layout_constraintStart_toStartOf="@+id/playlistSearchView"
                app:layout_constraintTop_toBottomOf="@+id/playlistSearchView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nbRoundsTextView"
                style="@style/Text.Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/nbRoundsInput"
                android:text="@string/nb_rounds_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nbRoundsInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/default_game_nb_rounds"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@id/nbRoundsTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nbRoundsTextView"
                app:layout_constraintTop_toTopOf="@id/nbRoundsTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/roundTimeTextView"
                style="@style/Text.Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/nbRoundsInput"
                android:text="@string/round_time_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/chooseTimeButton"
                style="@style/GradientButton"
                android:layout_marginStart="8dp"
                android:text="@string/round_duration_format"
                android:textAllCaps="false"
                app:icon="@drawable/ic_timer"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="@id/roundTimeTextView"
                app:layout_constraintStart_toEndOf="@id/roundTimeTextView"
                app:layout_constraintTop_toTopOf="@id/roundTimeTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/noSingCheckbox"
            android:layout_margin="12dp"
            android:text="@string/noSingModeCheckbox"
            style="@style/Text.Settings"/>

        <CheckBox
            android:id="@+id/hintCheckBox"
            style="@style/Text.Settings"
            android:layout_margin="12dp"
            android:text="@string/hint_option_text" />

        <CheckBox
            android:id="@+id/privacyCheckBox"
            style="@style/Text.Settings"
            android:layout_margin="12dp"
            android:text="@string/private_option_text" />


    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        style="@style/GradientButton"
        android:layout_marginBottom="16dp"
        android:text="@string/start_button_text"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>