...
    <string name="start_button_text">Start</string>
    <string name="save_settings_button_text">Save settings</string>
    <string name="volume_text">Volume:</string>
    <string name="spotify_text">Spotify Status:</string>
    <string name="hint_option_text">With hints</string>
    <string name="game_name_hint">A Fun Party</string>
    <string name="default_game_name">A fun Party</string>
    <string name="default_game_nb_rounds">3</string>
    <string name="playlist_error_format">Playlist "%s" not found</string>
    <string name="uid_text_format">Party id: %03d</string>
    <string name="uid_loading_text_format">Party id: Loading</string>
    <string name="uid_error">Failed to create lobby</string>
    <string name="uid_error_join">Failed to join lobby.</string>
    <string name="host_name_format">Host: %s</string>
    <string name="game_name_format">Game: %s</string>
...
